Add radiation data administration functionality
